move some common classes, refactor exceptions